18/9/2017 1.6.1.0
    user visible changes:
    * new config var INFO_MAP_FILES_URL_PREFIX to better define INFO_MAP_FILE_URL
    * some more progress message during copy snd sync batch file creation
    * utils.read_file_or_url does some caching if given url, local file and checksum
    * utils.read_file_or_url default timeout is now 18.05sec for connection, 120.05dec for the whole download

    admin visible changes:
    * info_map files split from the main info_map.txt will be added to the main info_map.txt so size and checksum are known
    * additional info_map files are read during InstlInstanceSync.read_remote_info_map
    * better config var definitions for admin
    * the full info_map.txt is now called full_info_map.txt
    * renewed interactive mode that was neglected where some features did not work, mainly do_depend

    programmer visible changes:
    * install_sources are now duplicated for Mac/Win and initial '/' is removed from common items
    * Removed the AdjustedSources table, it was no longer useful after install_sources is pre-inserted for Mac/Win/common   * YamlReader.read_yaml_file uses new function utils.read_file_or_url
    * SVNTable.read_from_file will not clear the database by calling clear_all() this will allow to read additional info_maps in InstlInstanceSync.read_remote_info_map
    * new function utils.read_file_or_url will gradually replace class open_for_read_file_or_url - opens urls using requests modules, for better compatibility with CloudFront
    * creation of sql views & triggers from a text file
    * intl.spec: add *.sql to defaults folder
    * all tables views and triggers now created with 'IF NOT EXISTS' so that in interactive mode we can init both client and admin classes
    * new func IndexItemsTable.get_unique_detail_values
    * reimplemented InstlAdmin.do_filter_infomap with new database tables and columns