@@ -571,59 +571,6 @@ class DownloadTool_win_curl(DownloadToolBase):
         download_command_parts.append(utils.quoteme_double(src_url))
         return " ".join(download_command_parts)
 
-    def create_config_files(self, curl_config_file_path, num_files):
-        import itertools
-
-        num_urls_to_download = len(self.urls_to_download)
-        if num_urls_to_download > 0:
-            connect_time_out = var_stack.ResolveVarToStr("CURL_CONNECT_TIMEOUT", "16")
-            max_time = var_stack.ResolveVarToStr("CURL_MAX_TIME", "180")
-            retries = var_stack.ResolveVarToStr("CURL_RETRIES", "2")
-            retry_delay = var_stack.ResolveVarToStr("CURL_RETRY_DELAY", "8")
-
-            sync_urls_cookie = var_stack.ResolveVarToStr("COOKIE_FOR_SYNC_URLS", default=None)
-
-            actual_num_files = int(max(0, min(num_urls_to_download, num_files)))
-            num_digits = len(str(actual_num_files))
-            file_name_list = ["-".join((curl_config_file_path, str(file_i).zfill(num_digits))) for file_i in range(actual_num_files)]
-            wfd_list = list()
-            for file_name in file_name_list:
-                wfd = utils.utf8_open(file_name, "w")
-                utils.make_open_file_read_write_for_all(wfd)
-                wfd_list.append(wfd)
-
-            for wfd in wfd_list:
-                wfd.write("insecure\n")
-                wfd.write("raw\n")
-                wfd.write("fail\n")
-                wfd.write("silent\n")
-                wfd.write("show-error\n")
-                wfd.write("compressed\n")
-                wfd.write("create-dirs\n")
-                wfd.write("connect-timeout = {connect_time_out}\n".format(**locals()))
-                wfd.write("max-time = {max_time}\n".format(**locals()))
-                wfd.write("retry = {retries}\n".format(**locals()))
-                wfd.write("retry-delay = {retry_delay}\n".format(**locals()))
-                if sync_urls_cookie:
-                    wfd.write("cookie = {sync_urls_cookie}\n".format(**locals()))
-                wfd.write("write-out = \"Progress: ... of ...; " + os.path.basename(wfd.name) + ": " + DownloadToolBase.curl_write_out_str + "\"\n")
-                wfd.write("\n")
-                wfd.write("\n")
-
-            wfd_cycler = itertools.cycle(wfd_list)
-            url_num = 0
-            for url, path in self.urls_to_download:
-                win_path = str(pathlib.PurePath(path)).replace("\\", "\\\\")
-                wfd = next(wfd_cycler)
-                wfd.write('''url = "{url}"\noutput = "{win_path}"\n\n'''.format(**locals()))
-                url_num += 1
-
-            for wfd in wfd_list:
-                wfd.close()
-            return file_name_list
-        else:
-            return ()
-
     def download_from_config_files(self, parallel_run_config_file_path, config_files):
         import win32api
         with utils.utf8_open(parallel_run_config_file_path, "w") as wfd:
